force-app/main/default/objects/Action_Log__c/Action_Log__c.object-meta.xml
<CustomObject>
    <label>Action Log</label>
    <nameField>
        <label>Action Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>