force-app/main/default/objects/Action_Log__c/fields/Admin_Summary__c.field-meta.xml
<CustomField>
    <fullName>Admin_Summary__c</fullName>
    <label>Admin Summary</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>