force-app/main/default/objects/Action_Log__c/fields/Condition_Sets__c.field-meta.xml
<CustomField>
    <fullName>Condition_Sets__c</fullName>
    <label>Condition Sets</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>