force-app/main/default/objects/Action_Log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Logs</relationshipLabel>
    <relationshipName>Contact_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>