force-app/main/default/objects/Action_Log__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Logs</relationshipLabel>
    <relationshipName>Lead_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>