force-app/main/default/objects/Action_Log__c/fields/Previous_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fit_Score__c</fullName>
    <label>Previous Fit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>