force-app/main/default/objects/Action_Log__c/fields/Rep_Summary__c.field-meta.xml
<CustomField>
    <fullName>Rep_Summary__c</fullName>
    <label>Rep Summary</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>