force-app/main/default/objects/Action_Log__c/fields/Score_Map__c.field-meta.xml
<CustomField>
    <fullName>Score_Map__c</fullName>
    <label>Score Map</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>