force-app/main/default/objects/Action_Log__c/fields/Score_Time__c.field-meta.xml
<CustomField>
    <fullName>Score_Time__c</fullName>
    <label>Score Time</label>
    <type>DateTime</type>
</CustomField>