force-app/main/default/objects/Action_Log__c/fields/Slice_Id__c.field-meta.xml
<CustomField>
    <fullName>Slice_Id__c</fullName>
    <label>Slice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>